fix results navbar z-index

--- a/src/modules/results/components/result-card.module.scss
+++ b/src/modules/results/components/result-card.module.scss
@@ -10,7 +10,7 @@
     }
 }
 .skeleton-box {
-    animation: animation-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite !important;
+    animation: animation-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
     background: #e0e0e0 !important;
     border-radius: 4px;
 }
@@ -66,7 +66,6 @@
     flex-direction: column;
     gap: 6px;
     color: transparent;
-
     @media screen and (min-width: 768px) {
         gap: 8px;
     }
