--- a/src/modules/results/components/results-navbar.module.scss
+++ b/src/modules/results/components/results-navbar.module.scss
@@ -8,7 +8,6 @@ $navbar-menu-icon-color: #5f6368;
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid #dadce0;
-    z-index: 50a;
 
     @media (min-width: 768px) {
         height: 70px;
