--- a/src/modules/results/results.module.scss
+++ b/src/modules/results/results.module.scss
@@ -3,6 +3,7 @@
 .navbar_container {
     position: sticky;
     top: 0;
+    z-index: 50;
 }
 
 .main {
